syntax = "proto3";
package com.wavesplatform.api.grpc;

import "block.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service BlocksApi {
    rpc GetBlock (BlockRequest) returns (BlockAndHeight);
    rpc GetBlocksRange (BlocksRangeRequest) returns (stream BlockAndHeight);
    rpc CalcBlocksDelay (BlocksDelayRequest) returns (google.protobuf.UInt64Value);
    rpc GetCurrentHeight (google.protobuf.Empty) returns (google.protobuf.UInt32Value);
}

message BlockRequest {
    oneof request {
        bytes block_id = 1;
        int32 height = 2;
        bytes parent_id = 3;
    }

    bool include_transactions = 100;
}

message BlocksRangeRequest {
    uint32 from_height = 1;
    uint32 to_height = 2;
    oneof filter {
        bytes generator = 3;
    }

    bool include_transactions = 100;
}

message BlocksDelayRequest {
    bytes block_id = 1;
    uint32 block_num = 2;
}

message BlockAndHeight {
    Block block = 1;
    uint32 height = 2;
}
